samples/_failures_safe/1761141036_6baa47_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d41a91a3.c: In function ‘main’:
./samples/SAFE/__tmp_d41a91a3.c:157:5: error: ‘print’ undeclared (first use in this function); did you mean ‘printf’?
  157 |     print
      |     ^~~~~
      |     printf
./samples/SAFE/__tmp_d41a91a3.c:157:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_d41a91a3.c:157:10: error: expected ‘;’ at end of input
  157 |     print
      |          ^
      |          ;
./samples/SAFE/__tmp_d41a91a3.c:157:5: error: expected declaration or statement at end of input
  157 |     print
      |     ^~~~~
